--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.2
   sqflite: ^1.1.0
-
+  dio: ^2.1.0
+  json_annotation: ^2.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^1.4.0
+  json_serializable: ^3.0.0
 
 flutter:
   uses-material-design: true
