--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   sqflite: ^1.1.0
   dio: ^2.1.0
   json_annotation: ^2.4.0
+  oktoast: ^2.1.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
