--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^2.1.0
   json_annotation: ^2.4.0
   oktoast: ^2.1.7
+  path_provider: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
